--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content class="ion-padding">
     <div class="login-logo">
-      <img src="assets/icon.png" class="logo_icon" alt="foodies">
+      <img src="assets/icon.png" class="logo_icon" alt="Desserts rilogy">
       <p class="login-name">{{'Login' | translate}}</p>
       <p class="subTitle">{{'Enter your login detail to' | translate}} <br>
         {{'access your account' | translate}}</p>
